// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.accounting;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.accounting.balance.grpc";
option java_outer_classname = "AccountingBalanceProto";
option objc_class_prefix = "GDA";

import "gedit/common.proto";

// The bonus service definition.
//https://accountingexplained.com/financial/cycle/
//https://medium.com/@RobertKhou/double-entry-accounting-in-a-relational-database-2b7838a5d7f8
service AccountingBalanceApi {

    rpc ListBalance (ListBalanceRequest) returns (stream BalanceResponse) {
    }

}

message ListBalanceRequest {
    string accountUuid = 1;

    int32 from = 100;
    int32 size = 101;

}

message BalanceResponse {
    Status status = 999;
    Balance balance = 1;
}

message Balance {
    //| 账户编号UUID      | 前期余额  | 前期日期  | 当期变化 | 当期日期  | 当期余额 |  CRC    |
    string accountUuid = 1;
    int32 previousBalance = 15;
    int64 previousDate = 16;
    int32 currentChanges = 17;
    int64 currentDate = 18;
    int32 currentBalance = 19;
}